[gd_scene load_steps=2 format=3 uid="uid://crupd18xhx3me"]

[ext_resource type="Script" uid="uid://umn8pi28lhrc" path="res://material_maker/widgets/polygon_edit/control_point.gd" id="1"]

[node name="ControlPoint" type="Control"]
custom_minimum_size = Vector2(7, 7)
layout_mode = 3
anchors_preset = 0
offset_right = 7.0
offset_bottom = 7.0
script = ExtResource("1")

[connection signal="gui_input" from="." to="." method="_on_ControlPoint_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
